--- a/accounts/account.css
+++ b/accounts/account.css
@@ -659,10 +659,12 @@ h2 span {
 /* --- Form Elements --- */
 .input-group {
     margin-bottom: 15px;
+    cursor: pointer;
 }
 
 .input-group label {
     display: block;
+
     margin: 0 0 5px 5px;
     color: var(--text-gray);
     font-size: 0.95rem;
@@ -687,15 +689,21 @@ h2 span {
 .input-wrapper input {
     width: 100%;
     background-color: var(--input-bg);
-    border: 1px solid transparent;
+    border: 1px solid green;
     border-radius: 12px;
     padding: 16px 16px 16px 45px;
+
     /* Padding left for the icon */
+    
     color: var(--text-white);
     font-size: 1rem;
     transition: border-color 0.3s ease;
     outline: none;
     z-index: 1;
+}
+
+.input-wrapper span i{
+    color: black;
 }
 
 .input-wrapper input::placeholder {
