--- a/cpanel/style.css
+++ b/cpanel/style.css
@@ -442,7 +442,7 @@ input:checked + .slider:before {
   font-weight: 800;
   margin: 0;
   background: linear-gradient(90deg, var(--primary), #b39dff);
-  -webkit-background-clip: text;
+  -webkit-background-clip: text white;
   -webkit-text-fill-color: transparent;
 }
 
